McStas-2.5_CPU_MPICC/RITA-II/compile_stdout.txt
INFO: No output directory specified (--dir)
INFO: Using directory: "RITA-II_20200225_210033"
INFO: Regenerating c-file: RITA-II.c
Info:    'Source_gen4' is a contributed component.
Info:    'Exact_radial_coll' is a contributed component.
Warning: Component source=Source_gen4(string flux_file) definition parameter
         may be changed into a setting parameter to avoid
         warnings at compile time.
Warning: Component source=Source_gen4(string xdiv_file) definition parameter
         may be changed into a setting parameter to avoid
         warnings at compile time.
Warning: Component source=Source_gen4(string ydiv_file) definition parameter
         may be changed into a setting parameter to avoid
         warnings at compile time.
Warning: Component kMoni=PSD_monitor_psf_eff(string filename) definition parameter
         may be changed into a setting parameter to avoid
         warnings at compile time.
Warning: Component kMoni1st=PSD_monitor_psf_eff(string filename) definition parameter
         may be changed into a setting parameter to avoid
         warnings at compile time.
Warning: Component kMoni2nd=PSD_monitor_psf_eff(string filename) definition parameter
         may be changed into a setting parameter to avoid
         warnings at compile time.
Warning: Component kMoni3rd=PSD_monitor_psf_eff(string filename) definition parameter
         may be changed into a setting parameter to avoid
         warnings at compile time.
Warning: Component psd_detector=PSD_monitor_psf_eff(string filename) definition parameter
         may be changed into a setting parameter to avoid
         warnings at compile time.
Warning: Component psd_window1=PSD_monitor_psf_eff(string filename) definition parameter
         may be changed into a setting parameter to avoid
         warnings at compile time.
Warning: Component psd_window2=PSD_monitor_psf_eff(string filename) definition parameter
         may be changed into a setting parameter to avoid
         warnings at compile time.
Warning: Component psd_window3=PSD_monitor_psf_eff(string filename) definition parameter
         may be changed into a setting parameter to avoid
         warnings at compile time.
Warning: Component psd_window4=PSD_monitor_psf_eff(string filename) definition parameter
         may be changed into a setting parameter to avoid
         warnings at compile time.
Warning: Component psd_window5=PSD_monitor_psf_eff(string filename) definition parameter
         may be changed into a setting parameter to avoid
         warnings at compile time.
Warning: Component psd_window6=PSD_monitor_psf_eff(string filename) definition parameter
         may be changed into a setting parameter to avoid
         warnings at compile time.
Warning: Component psd_window7=PSD_monitor_psf_eff(string filename) definition parameter
         may be changed into a setting parameter to avoid
         warnings at compile time.
Warning: Component psd_window8=PSD_monitor_psf_eff(string filename) definition parameter
         may be changed into a setting parameter to avoid
         warnings at compile time.
Warning: Component psd_window9=PSD_monitor_psf_eff(string filename) definition parameter
         may be changed into a setting parameter to avoid
         warnings at compile time.
Info:    Defining SPLIT from monochromator_curved=Monochromator_curved() to END in instrument RITA_II
Info:    Defining SPLIT from a3=Arm() to END in instrument RITA_II
Info:    Defining SPLIT from focus_ana=Arm() to END in instrument RITA_II
CFLAGS=
        INFO: Recompiling: ./RITA-II.out
/zhome/89/0/38697/McStas/mcstas/2.5/tools/Python/mcrun/../mccodelib/../../../sources/Virtual_output.comp: In function 'mcraytrace':
/zhome/89/0/38697/McStas/mcstas/2.5/tools/Python/mcrun/../mccodelib/../../../sources/Virtual_output.comp:119:39: error: '_particle' undeclared (first use in this function)
   pp = Monitor_nD_Trace(&DEFS, &Vars, _particle);
                                       ^~~~~~~~~
/zhome/89/0/38697/McStas/mcstas/2.5/tools/Python/mcrun/../mccodelib/../../../sources/Virtual_output.comp:119:39: note: each undeclared identifier is reported only once for each function it appears in
/zhome/89/0/38697/McStas/mcstas/2.5/tools/Python/mcrun/../mccodelib/../../../sources/Virtual_output.comp:119:8: error: too many arguments to function 'Monitor_nD_Trace'
   pp = Monitor_nD_Trace(&DEFS, &Vars, _particle);
        ^~~~~~~~~~~~~~~~
/zhome/89/0/38697/McStas/mcstas/2.5/tools/Python/mcrun/../mccodelib/../../../sources/Virtual_output.comp:1008:5: note: declared here
